--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "jsqrcode": "^0.0.7",
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.22",
+    "vant": "^3.6.3",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
@@ -27,6 +29,7 @@
     "postcss-px-to-viewport": "^1.1.1",
     "sass": "^1.55.0",
     "typescript": "^4.6.4",
+    "unplugin-vue-components": "^0.22.7",
     "vite": "^3.1.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
